make SiNaS compatible with Java 8